I18n.locale comparations fixed - to_s added

--- a/app/views/admin/shared/_change_locale.html.haml
+++ b/app/views/admin/shared/_change_locale.html.haml
@@ -5,9 +5,9 @@
   .edit
     %span
     - Globalize2Extension.locales.map do |locale|
-      = link_to_unless(I18n.locale == locale, "<img src='/images/admin/#{locale.downcase}.gif' alt='#{locale.upcase}' />", params.merge(:locale => locale))
-      - if !@page.nil? && I18n.locale == locale
-        - if I18n.locale != Globalize2Extension.default_language
+      = link_to_unless(I18n.locale.to_s == locale, "<img src='/images/admin/#{locale.downcase}.gif' alt='#{locale.upcase}' />", params.merge(:locale => locale))
+      - if !@page.nil? && I18n.locale.to_s == locale
+        - if I18n.locale.to_s != Globalize2Extension.default_language
           - if @page.translated_locales.include?(locale.to_sym)
             %span.translated
               %label{:for => "reset_translations"}
