--- a/app/views/admin/shared/_change_locale.html.haml
+++ b/app/views/admin/shared/_change_locale.html.haml
@@ -5,15 +5,15 @@
   .edit
     %span
     - Globalize2Extension.locales.map do |locale|
-      = link_to_unless(I18n.locale.to_s == locale, "<img src='/images/admin/#{locale.downcase}.gif' alt='#{locale.upcase}' />", params.merge(:locale => locale))
-      - if !@page.nil? && I18n.locale.to_s == locale
-        - if I18n.locale.to_s != Globalize2Extension.default_language
+      = link_to_unless(I18n.locale.to_s == locale.to_s, "<img src='/images/admin/#{locale.downcase}.gif' alt='#{locale.upcase}' />", params.merge(:locale => locale))
+      - if !@page.nil? && I18n.locale.to_s == locale.to_s
+        - if I18n.locale.to_s != Globalize2Extension.default_language.to_s
           - if @page.translated_locales.include?(locale.to_sym)
             %span.translated
               %label{:for => "reset_translations"}
                 %input{:type => "checkbox", :value => "true", :name => "page[reset_translations]", :id => "reset_translations"}
                 Delete  
-                = I18n.locale.upcase
+                = I18n.locale.to_s.upcase
                 translation
           - else
             %span.not-translated (not translated)
